[gd_scene load_steps=4 format=3 uid="uid://c72pne30u477h"]

[ext_resource type="Script" path="res://Item/Chest/ChestBase.gd" id="1_pehxv"]
[ext_resource type="Texture2D" uid="uid://cnibwg5kjh2us" path="res://Material/box2.png" id="1_yhwxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y75r8"]
size = Vector2(64, 23)

[node name="ChestBase" type="Node2D"]
script = ExtResource("1_pehxv")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_yhwxl")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_y75r8")

[node name="Interactive" type="Label" parent="."]
layout_direction = 1
offset_left = -10.0
offset_top = 14.0
offset_right = 14.0
offset_bottom = 40.0
scale = Vector2(0.8, 0.8)
text = "[E]"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
